[gd_scene format=3 uid="uid://cttk7ufnjvvp6"]

[ext_resource type="Script" uid="uid://df2fi3mh2kaah" path="res://main_menu.gd" id="1_i26rj"]
[ext_resource type="AudioStream" uid="uid://cpsmjdbnwydw2" path="res://assets/audio/music/IntroAmbientBoring.mp3" id="2_eiy7p"]
[ext_resource type="AudioStream" uid="uid://jo3qo8a0j6ka" path="res://assets/audio/soundeffects/menuMove2.wav" id="3_h7a2f"]
[ext_resource type="Texture2D" uid="uid://teo10lsqs18g" path="res://assets/Background Block Colour 260026.png" id="4_cqjrg"]
[ext_resource type="AudioStream" uid="uid://c8kstv88bpsbn" path="res://assets/audio/music/InterestingAudio2.mp3" id="5_e2xy7"]
[ext_resource type="Texture2D" uid="uid://dntbqev65cubf" path="res://assets/Background Void Spritesheet Transparent.png" id="6_fimr5"]
[ext_resource type="Script" uid="uid://bj4oonpnvxu0r" path="res://Nebula.gd" id="7_u7cqb"]
[ext_resource type="Texture2D" uid="uid://wfvpoihsni6q" path="res://assets/Anubis.png" id="8_e2xy7"]

[sub_resource type="GDScript" id="GDScript_cqjrg"]
script/source = "extends Sprite2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	var screenDimensions: Vector2 = get_viewport().get_visible_rect().size
	print(screenDimensions.x)
	# set x between -0.125 and 0.125
	print(screenDimensions.y)
	# set y between -0.15 and 0.15 
	var nebula = $Nebula
	nebula.position = Vector2(screenDimensions.x * randfn(0, 0.10), screenDimensions.y * randfn(0, 0.13))
	for i in range(10):
		var copy = $Nebula.duplicate()
		copy.position = Vector2(screenDimensions.x * randfn(0, 0.10), screenDimensions.y * randfn(0, 0.13))
		add_child(copy)
		self.move_child(copy, 0)
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="AtlasTexture" id="AtlasTexture_sjtuv"]
atlas = ExtResource("6_fimr5")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvq6i"]
atlas = ExtResource("6_fimr5")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tx0c"]
atlas = ExtResource("6_fimr5")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0to5b"]
atlas = ExtResource("6_fimr5")
region = Rect2(120, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_e2xy7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjtuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvq6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tx0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0to5b")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Main Menu" type="Node2D" unique_id=1424249475]
position = Vector2(529, 329)
script = ExtResource("1_i26rj")

[node name="Button" type="Button" parent="." unique_id=1365020170]
offset_left = -19.0
offset_top = -27.0
offset_right = 88.0
offset_bottom = 27.0
text = "Face Judgement"
script = ExtResource("1_i26rj")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="." unique_id=1880305984]
stream = ExtResource("2_eiy7p")
volume_db = 7.298
autoplay = true

[node name="HoverNoise" type="AudioStreamPlayer" parent="." unique_id=625778438]
stream = ExtResource("3_h7a2f")

[node name="FadeOut" type="ColorRect" parent="." unique_id=1179222149]
visible = false
offset_left = -1000.0
offset_top = -1000.0
offset_right = 39000.0
offset_bottom = 39000.0
color = Color(0, 0, 0, 0)

[node name="BackgroundBlockColour260026" type="Sprite2D" parent="." unique_id=636342998]
z_index = -3
position = Vector2(63.37494, 12.2500305)
scale = Vector2(6.8460937, 5.2604165)
texture = ExtResource("4_cqjrg")
script = SubResource("GDScript_cqjrg")

[node name="Background Music" type="AudioStreamPlayer" parent="BackgroundBlockColour260026" unique_id=350133688]
stream = ExtResource("5_e2xy7")
autoplay = true
parameters/looping = false

[node name="Nebula" type="AnimatedSprite2D" parent="BackgroundBlockColour260026" unique_id=301614339]
position = Vector2(-158.20302, -121.11628)
scale = Vector2(0.2764579, 0.37209302)
sprite_frames = SubResource("SpriteFrames_e2xy7")
script = ExtResource("7_u7cqb")

[node name="Anubis" type="Sprite2D" parent="." unique_id=2044407947]
z_index = -1
position = Vector2(47, -45)
scale = Vector2(3.05625, 3.05625)
texture = ExtResource("8_e2xy7")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
